Fixed spacing on viewTasks

--- a/Firebase/public/stylesheets/style.css
+++ b/Firebase/public/stylesheets/style.css
@@ -597,4 +597,8 @@ body{
   text-align: center;
 }
 
+.taskbody {
+  margin-top: .5em;
+}
+
 /* END */
